# cmake-tutorial

./: .gitignore  CMakeLists.txt  Readme.md  build.sh  main.cpp  run.sh
